# drftutorial

./: .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
drftutorial/: asgi.py  celery.py  settings.py  settings_testing.py  urls.py  wsgi.py
drftutorial/snippets/: admin.py  apps.py  documents.py  filters.py  models.py  serializers.py  tasks.py  urls.py  views.py
drftutorial/snippets/migrations/: 0001_initial.py  0002_alter_snippet_title.py  0003_snippet_expired_at.py  0004_alter_snippet_table.py
drftutorial/snippets/tests/: __init__.py  common.py  test_model_snippet.py  test_serializers.py  test_throttling.py  test_views.py
scripts/: run_devserver.sh  test.sh
terraform/: main.tf  output.tf  variables.tf
